refactor: code dedup + little perf enhancement